# dish-second-course

./: .gitignore  Dockerfile  README.md  airflow.cfg  airflow.db  pyproject.toml
dags/: etl_google_analytics_dag.py
data/daily_visits/date=2016-08-01/: part-627803fd.json
data/daily_visits/date=2016-08-02/: part-063652b7.json
data/daily_visits/date=2016-08-03/: part-0dd72e78.json
data/daily_visits/date=2016-08-04/: part-9275c5e9.json
data/daily_visits/date=2016-08-05/: part-4b73263d.json
data/daily_visits/date=2016-08-06/: part-260f9196.json
data/daily_visits/date=2016-08-07/: part-8027adc3.json
data/daily_visits/date=2016-08-08/: part-ba9eed32.json
data/daily_visits/date=2016-08-09/: part-73aaaa45.json
data/daily_visits/date=2016-08-10/: part-dfefce8e.json
data/daily_visits/date=2016-08-11/: part-0c389e3e.json
data/daily_visits/date=2016-08-12/: part-9544d646.json
data/daily_visits/date=2016-08-13/: part-0448f397.json
data/daily_visits/date=2016-08-14/: part-53c9ce95.json
data/daily_visits/date=2016-08-15/: part-6b94904d.json
infra/airflow/: airflow.cfg  airflow.db
src/api-int-data-exp/: README.md  api_exp.py
src/etl/: README.md  api_client.py  bq_data_load.py  create_bq_tables.py  daily_visits_schema.py  data_extractor.py  data_pipeline.py  etl_google_analytics_dag.py  extract_dv_n_ga.py  ga_sessions_schema.py  load_json_to_bigquery.py  requirement.txt  test_api_client.py
src/sql/: daily_visits.sql  daily_visits_partitioned.sql  ga_session.sql  ga_sessions.sql  ga_sessions_partitioned.sql
(+356 files in other folders)
