[tool.poetry]
name = "dish-second-course"
version = "0.1.0"
description = ""
authors = ["abhiiiiiiijit <abhijitjan22@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
