[tool.poetry]
name = "dish-second-course"
version = "0.1.0"
description = ""
authors = ["abhiiiiiiijit <abhijitjan22@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
google-cloud-bigquery = "^3.38.0"
google-auth = "^2.42.0"
google-cloud-bigquery-storage = "^2.34.0"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
